Make it possible to _evaluate_ sum's instead of expecting them to be simplified at some point.

BUG: 260006

svn path=/trunk/KDE/kdeedu/kalgebra/; revision=1207851